setup/resources/install/post-install/kfserving/0.5.0-rc2/https/gateway-tls.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-prd
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - airuntime.com
    - "*.airuntime.com"
    # - app.airuntime.com
    # - kiali.airuntime.com
    # - prometheus.airuntime.com
    # - grafana.airuntime.com
    # - tracing.airuntime.com
    # - es.airuntime.com
    # - kibana.airuntime.com
    # - fluentd.airuntime.com
    # - tekton.airuntime.com

    - "*.dev.airuntime.com"
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   tls:
  #     mode: SIMPLE
  #     credentialName: ingress-tls-prd
  #   hosts:
  #   - dashboard.airuntime.com
  #   - dashboard.dev.airuntime.com
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingress-istio-prd
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - prd.airuntime.com
    - "*.prd.airuntime.com"
    # - app.prd.airuntime.com
    # - kiali.prd.airuntime.com
    # - prometheus.prd.airuntime.com
    # - grafana.prd.airuntime.com
    # - tracing.prd.airuntime.com
    # - es.prd.airuntime.com
    # - kibana.prd.airuntime.com
    # - fluentd.prd.airuntime.com
    # - tekton.prd.airuntime.com

    - "*.stg.airuntime.com"

  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   tls:
  #     mode: SIMPLE
  #     credentialName: ingress-istio-tls-prd
  #   hosts:
  #   - dashboard.prd.airuntime.com
  #   - dashboard.stg.airuntime.com
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - kiali.airuntime.com
  - kiali.dev.airuntime.com  
  - kiali.prd.airuntime.com
  - kiali.stg.airuntime.com
  gateways:
  - ingress-prd
  - ingress-istio-prd
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001
      # headers:
      #   request:
      #     set:
      #     add:
      #     remove:
      #   response:
      #     remove:
      #     - foo
    rewrite:
      uri: /
    # rewrite:
    # Rewrite the original host header to the host header of Search service
    # in order to redirect requests to Search service.
    #   authority: kiali.istio-system.svc.cluster.local
    #   uri: /
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
  - prometheus.airuntime.com
  - prometheus.dev.airuntime.com  
  - prometheus.prd.airuntime.com
  - prometheus.stg.airuntime.com
  gateways:
  - ingress-prd
  - ingress-istio-prd
  http:
  - route:
    - destination:
        host: prometheus
        port:
          number: 9090
    rewrite:
      uri: /
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: prometheus
  namespace: istio-system
spec:
  host: prometheus
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:
  - grafana.airuntime.com
  - grafana.dev.airuntime.com  
  - grafana.prd.airuntime.com
  - grafana.stg.airuntime.com
  gateways:
  - ingress-prd
  - ingress-istio-prd
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000
    rewrite:
      uri: /
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: grafana
  namespace: istio-system
spec:
  host: grafana
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tracing
  namespace: istio-system
spec:
  hosts:
  - tracing.airuntime.com
  - tracing.dev.airuntime.com  
  - tracing.prd.airuntime.com
  - tracing.stg.airuntime.com
  gateways:
  - ingress-prd
  - ingress-istio-prd
  http:
  - route:
    - destination:
        host: tracing
        port:
          number: 80
    rewrite:
      uri: /
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: tracing
  namespace: istio-system
spec:
  host: tracing
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kubernetes-dashboard
  namespace: istio-system
spec:
  hosts:
  # - "*.airuntime.com"
  # - "*.prd.airuntime.com"
  - dashboard.airuntime.com
  - dashboard.dev.airuntime.com
  - dashboard.prd.airuntime.com
  - dashboard.stg.airuntime.com
  gateways:
  - ingress-prd
  - ingress-istio-prd
  http:
  - route:
    - destination:
        host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
        port:
          number: 8443
    rewrite:
      uri: /
  # tls:
  # - match:
  #   # - port: 443
  #   - sniHosts:
  #     - dashboard.airuntime.com
  #     - dashboard.dev.airuntime.com
  #     - dashboard.prd.airuntime.com
  #     - dashboard.stg.airuntime.com
  #   route:
  #   - destination:
  #       # host: kubernetes-dashboard
  #       host: kubernetes-dashboard
  #       port: 
  #         number: 443
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  # namespace: kubernetes-dashboard
spec:
  host: kubernetes-dashboard
  trafficPolicy:
    tls:
      mode: DISABLE
---
